--- a/index.html
+++ b/index.html
@@ -3,23 +3,18 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Mobile touch slider </title>
-  
-  
-  
+  <title>Mobile touch slider </title>  
       <link rel="stylesheet" href="css/style.css">
-
-  
 </head>
 
 <body>
 
   <link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.min.css">
 <script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
-
-<div class="carousel-wrapper">
-  <div class="carousel" data-flickity>
-    <div class="carousel-cell">
+<section class="mbl-card">
+<div class="mbl-carousel-wrapper">
+  <div class="mbl-carousel" data-flickity>
+    <div class="mbl-carousel-cell">
       <h3>Product 1</h3>
       <a class="more" href="">Explore more</a>
       <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=" />
@@ -28,7 +23,7 @@
         <span>225<sup>€</sup></span>
       </div>
     </div>
-    <div class="carousel-cell">
+    <div class="mbl-carousel-cell">
       <h3>Product 2</h3>
       <a class="more" href="">Explore more</a>
       <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=" />
@@ -37,7 +32,25 @@
         <span>225<sup>€</sup></span>
       </div>
     </div>
-    <div class="carousel-cell">
+    <div class="mbl-carousel-cell">
+      <h3>Product 3</h3>
+      <a class="more" href="">Explore more</a>
+      <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=" />
+      <div class="line"></div>
+      <div class="price">
+        <span>225<sup>€</sup></span>
+      </div>
+    </div>
+    <div class="mbl-carousel-cell">
+      <h3>Product 3</h3>
+      <a class="more" href="">Explore more</a>
+      <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=" />
+      <div class="line"></div>
+      <div class="price">
+        <span>225<sup>€</sup></span>
+      </div>
+    </div>
+    <div class="mbl-carousel-cell">
       <h3>Product 3</h3>
       <a class="more" href="">Explore more</a>
       <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=" />
@@ -48,6 +61,7 @@
     </div>
   </div>
 </div>
+</section>
   
   
 
