--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <div class="mbl-carousel" data-flickity>
     <div class="mbl-carousel-cell">
       <h3>Product 1</h3>
-      <a class="more" href="">Explore more</a>
       <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=" />
+      <h4>Description</h4>
       <div class="line"></div>
-      <div class="price">
-        <span>225<sup>€</sup></span>
+      <div class="explore">
+        <a href="#">Explore more</a>
       </div>
     </div>
     <div class="mbl-carousel-cell">
@@ -28,7 +28,7 @@
       <a class="more" href="">Explore more</a>
       <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=" />
       <div class="line"></div>
-      <div class="price">
+      <div class="explore">
         <span>225<sup>€</sup></span>
       </div>
     </div>
@@ -37,7 +37,7 @@
       <a class="more" href="">Explore more</a>
       <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=" />
       <div class="line"></div>
-      <div class="price">
+      <div class="explore">
         <span>225<sup>€</sup></span>
       </div>
     </div>
@@ -46,7 +46,7 @@
       <a class="more" href="">Explore more</a>
       <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=" />
       <div class="line"></div>
-      <div class="price">
+      <div class="explore">
         <span>225<sup>€</sup></span>
       </div>
     </div>
@@ -55,7 +55,7 @@
       <a class="more" href="">Explore more</a>
       <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=" />
       <div class="line"></div>
-      <div class="price">
+      <div class="explore">
         <span>225<sup>€</sup></span>
       </div>
     </div>
