--- a/index.html
+++ b/index.html
@@ -1,69 +1,69 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <title>Mobile touch slider </title>  
-      <link rel="stylesheet" href="css/style.css">
+  <title>Mobile touch slider </title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
   <link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.min.css">
-<script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
-<section class="mbl-card">
-<div class="mbl-carousel-wrapper">
-  <div class="mbl-carousel" data-flickity>
-    <div class="mbl-carousel-cell">
-      <h3>Product 1</h3>
-      <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=" />
-      <h4>Description</h4>
-      <div class="line"></div>
-      <div class="explore">
-        <a href="#">Explore more</a>
+  <script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
+  <section class="mbl-card">
+    <div class="mbl-carousel-wrapper">
+      <div class="mbl-carousel" data-flickity>
+        <div class="mbl-carousel-cell">
+          <h3>Product 1</h3>
+          <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop="
+          />
+          <h4>Description</h4>
+          <div class="explore">
+            <a href="#">Explore more</a>
+          </div>
+        </div>
+        <div class="mbl-carousel-cell">
+          <h3>Product 1</h3>
+          <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop="
+          />
+          <h4>Description</h4>
+          <div class="explore">
+            <a href="#">Explore more</a>
+          </div>
+        </div>
+        <div class="mbl-carousel-cell">
+          <h3>Product 1</h3>
+          <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop="
+          />
+          <h4>Description</h4>
+          <div class="explore">
+            <a href="#">Explore more</a>
+          </div>
+        </div>
+        <div class="mbl-carousel-cell">
+          <h3>Product 1</h3>
+          <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop="
+          />
+          <h4>Description</h4>
+          <div class="explore">
+            <a href="#">Explore more</a>
+          </div>
+        </div>
+        <div class="mbl-carousel-cell">
+          <h3>Product 1</h3>
+          <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop="
+          />
+          <h4>Description</h4>
+          <div class="explore">
+            <a href="#">Explore more</a>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="mbl-carousel-cell">
-      <h3>Product 2</h3>
-      <a class="more" href="">Explore more</a>
-      <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=" />
-      <div class="line"></div>
-      <div class="explore">
-        <span>225<sup>€</sup></span>
-      </div>
-    </div>
-    <div class="mbl-carousel-cell">
-      <h3>Product 3</h3>
-      <a class="more" href="">Explore more</a>
-      <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=" />
-      <div class="line"></div>
-      <div class="explore">
-        <span>225<sup>€</sup></span>
-      </div>
-    </div>
-    <div class="mbl-carousel-cell">
-      <h3>Product 3</h3>
-      <a class="more" href="">Explore more</a>
-      <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=" />
-      <div class="line"></div>
-      <div class="explore">
-        <span>225<sup>€</sup></span>
-      </div>
-    </div>
-    <div class="mbl-carousel-cell">
-      <h3>Product 3</h3>
-      <a class="more" href="">Explore more</a>
-      <img src="https://images.unsplash.com/photo-1464305795204-6f5bbfc7fb81?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=" />
-      <div class="line"></div>
-      <div class="explore">
-        <span>225<sup>€</sup></span>
-      </div>
-    </div>
-  </div>
-</div>
-</section>
-  
-  
+  </section>
+
+
 
 </body>
 
